# Server_Engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README  serenoServer.pc.in
include/: ClientSocket.h  ConcurrentVector.h  Server.h  SocketData.h  utils.h
include/Types/: ServerType.h
src/: ClientSocket.cpp  main.cpp
